--- a/src/main/resources/assets/aluminum/lang/en_us.json
+++ b/src/main/resources/assets/aluminum/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.aluminum.aluminum": "Aluminium",
-  "item.aluminum.raw_aluminum": "Raw Aluminium"
+  "item.aluminum.raw_aluminum": "Raw Aluminium",
+
+  "itemgroup.aluminum": "Aluminum Ascend"
 }
